Cherry-pick r266789. rdar://problem/69101080

REGRESSION (r264856): updating easing on accelerated animation results in incorrect playback
    https://bugs.webkit.org/show_bug.cgi?id=215853
    <rdar://problem/67815853>

    Reviewed by Simon Fraser.

    Source/WebCore:

    Stop accelerated animations if the timing function has changed in a way that makes it so that it should
    no longer play accelerated, but otherwise simply update their timing properties such that may keep
    playing.

    Test: webanimations/accelerated-animation-easing-update-after-pause.html
          webanimations/accelerated-animation-easing-update-steps-after-pause.html

    * animation/KeyframeEffect.cpp:
    (WebCore::KeyframeEffect::canBeAccelerated const):
    (WebCore::KeyframeEffect::updateAcceleratedActions):
    (WebCore::KeyframeEffect::animationDidChangeTimingProperties):
    * animation/KeyframeEffect.h:

    LayoutTests:

    Add new tests that check that updating an animation's easing does not stop it.

    * platform/win/TestExpectations:
    * webanimations/accelerated-animation-easing-update-after-pause-expected.html: Added.
    * webanimations/accelerated-animation-easing-update-after-pause.html: Added.
    * webanimations/accelerated-animation-easing-update-steps-after-pause-expected.html: Addded.
    * webanimations/accelerated-animation-easing-update-steps-after-pause.html: Addded.

    Canonical link: https://commits.webkit.org/229153@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266789 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.120@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@267272 268f45cc-cd09-0410-ab3c-d52691b4dbfc